--- a/trunk/gtk.mod/binding.mod/install
+++ b/trunk/gtk.mod/binding.mod/install
@@ -26,20 +26,20 @@ if [ $retval -ne 0 ]; then
         exit 1
 fi
 echo "install: Renaming files"
-mv binding.bmx binding_old.bmx
+mv gtk.bmx gtk_old.bmx
 retval=$?
 if [ $retval -ne 0 ]; then
         echo "install: mv returned $retval, exiting"
         exit 1
 fi
-mv binding_new.bmx binding.bmx
+mv gtk_new.bmx gtk.bmx
 retval=$?
 if [ $retval -ne 0 ]; then
         echo "install: mv returned $retval, exiting"
         exit 1
 fi
 echo "install: Running bmk to make module"
-../../../bin/bmk makemods gtk.binding
+../../../bin/bmk makemods pub.gtk
 retval=$?
 if [ $retval -ne 0 ]; then
         echo
