--- a/trunk/gtk.mod/binding.mod/install
+++ b/trunk/gtk.mod/binding.mod/install
@@ -6,6 +6,8 @@ if [ $LOGNAME = "root" ]; then
         echo "install: Installing as root can potentially cause problems, please install as normal user"
         exit 1
 fi
+echo "install: Configuring gtk.binding"
+cd binding.mod
 if [ $1 = "--configure-only" ]; then
         echo "install: Running in configuring mode, the other stupid things will be skipped"
 else
@@ -45,5 +47,14 @@ if [ $retval -ne 0 ]; then
         echo
         echo "install: bmk returned $retval, exiting"
         exit 1
+fi
+echo "install: Configuring gtk.oop"
+echo "install: Running bmk to make module"
+../../../bin/bmk makemods gtk.oop
+retval=$?
+if [ $retval -ne 0 ]; then
+	echo
+	echo "install: bmk returned $retval, exiting"
+	exit 1
 fi
 echo "install: Finished"
