--- a/trunk/gtk.mod/install
+++ b/trunk/gtk.mod/install
@@ -8,19 +8,16 @@ if [ $LOGNAME = "root" ]; then
 fi
 echo "install: Configuring gtk.binding"
 cd binding.mod
-if [ $1 = "--configure-only" ]; then
-        echo "install: Running in configuring mode, the other stupid things will be skipped"
-else
-        echo "install: Running in full mode"
-        echo "install: Compiling Scintilla"
-        make -Cscintilla/gtk
-        retval=$?
-        if [ $retval -ne 0 ]; then
-                echo "install: make returned $retval, exiting"
-                exit 1
-        fi
-fi
-echo "install: Runnning perl config script"
+echo "install: Running in full mode"
+echo "install: Compiling Scintilla"
+echo "install: TODO: Add Scintilla-support"
+# make -Cscintilla/gtk
+# retval=$?
+# if [ $retval -ne 0 ]; then
+#        echo "install: make returned $retval, exiting"
+#        exit 1
+# fi
+echo "install: Running perl config script"
 ./genconf
 retval=$?
 if [ $retval -ne 0 ]; then
