updated install script

--- a/trunk/gtk.mod/TODO
+++ b/trunk/gtk.mod/TODO
@@ -5,4 +5,5 @@
 - Save old open folder
 (done) - Add F5 shortcut
 - Add menu option to compile without executing
-- remove license violations
+(hopefully done) - remove license violations
+(buggy) - Add Auto-Indent to IDE
