updated genconf to check for both firefox and mozilla

--- a/trunk/gtk.mod/install
+++ b/trunk/gtk.mod/install
@@ -23,7 +23,7 @@ echo "install: Configuring gtk.binding"
 cd binding.mod > install.log
 echo "install: Running perl config script"
 export PKG_CONFIG_PATH=/usr/share/pkgconfig:/usr/lib/pkgconfig:/usr/X11R6/lib/pkgconfig:/usr/local/share/pkgconfig:/usr/local/lib/pkgconfig:/usr/local/X11R6/lib/pkgconfig 
-./genconf >> ../install.log
+./genconf
 retval=$?
 if [ $retval -ne 0 ]; then
         echo "install: genconf returned $retval, exiting"
