- fixed docmymod to work with BlitzMax>1.06 - added docmods script to automatically call docmymod - added automatic capitalization to IDE

--- a/trunk/gtk.mod/install
+++ b/trunk/gtk.mod/install
@@ -241,4 +241,6 @@ if [ $retval -ne 0 ]; then
 	echo "install: ChOwn failed"
 	echo "install: Perhaps you won´t be able to use the modules"
 fi
+echo "install: Removing tmp/ld.tmp"
+rm -f ../../tmp/ld.tmp
 echo "install: The IDE binary is at $(pwd)/IDE"
