--- a/trunk/gtk.mod/install
+++ b/trunk/gtk.mod/install
@@ -118,19 +118,19 @@ ls /usr/lib/libgtkembedmoz.so > /dev/null 2> /dev/null
 retval=$?
 if [ $retval -ne 0 ]; then
 	echo "No"
-	echo -n "install: Looking whether libgtkembedmoz.so is in /usr/lib/mozilla-firefox... "
-	ls /usr/lib/mozilla-firefox/libgtkembedmoz.so > /dev/null 2> /dev/null
+	echo -n "install: Looking whether libgtkembedmoz.so is in /usr/lib/mozilla... "
+	ls /usr/lib/mozilla/libgtkembedmoz.so > /dev/null 2> /dev/null
 	retvaltwo=$?
 	if [ $retvaltwo -ne 0 ]; then
 		echo "install: No"
-		echo -n "install: Looking whether libgtkembedmoz.so is in /usr/lib/mozilla... "
-		ls /usr/lib/mozilla/libgtkembedmoz.so > /dev/null 2> /dev/null
+		echo -n "install: Looking whether libgtkembedmoz.so is in /usr/lib/mozilla-firefox... "
+		ls /usr/lib/mozilla-firefox/libgtkembedmoz.so > /dev/null 2> /dev/null
 		retvalthree=$?
 		if [ $retvalthree -ne 0 ]; then
 			echo "No"
 			echo "-----------------------------"
 			echo "install: WARNING!"
-			echo "install: Couldn´t find libgtkembedmoz.so in /usr/lib, /usr/lib/mozilla-firefox or /usr/lib/mozilla."
+			echo "install: Couldn´t find libgtkembedmoz.so in /usr/lib, /usr/lib/mozilla or /usr/lib/mozilla-firefox."
 			echo "install: Normally this is really really bad, but if you are lucky it simply works."
 			echo "install: Please don´t file any bugs if this message had appeared"
 			echo "-----------------------------"
@@ -142,8 +142,8 @@ if [ $retval -ne 0 ]; then
 			sleep 1
 		else
 			echo "Yes"
-			echo "install: Creating symlink from /usr/lib/mozilla/libgtkembedmoz.so to /usr/lib/libgtkembedmoz.so"
-			ln -s /usr/lib/mozilla/libgtkembedmoz.so /usr/lib/libgtkembedmoz.so
+			echo "install: Creating symlink from /usr/lib/mozilla-firefox/libgtkembedmoz.so to /usr/lib/libgtkembedmoz.so"
+			ln -s /usr/lib/mozilla-firefox/libgtkembedmoz.so /usr/lib/libgtkembedmoz.so
 			retvaltwo=$?
 			if [ $retvaltwo -ne 0 ]; then
 				echo "--------------------------"
@@ -157,8 +157,8 @@ if [ $retval -ne 0 ]; then
 		fi
 	else
 		echo "Yes"
-		echo "install: Creating symlink from /usr/lib/mozilla-firefox/libgtkembedmoz.so to /usr/lib/libgtkembedmoz.so"
-		ln -s /usr/lib/mozilla-firefox/libgtkembedmoz.so /usr/lib/libgtkembedmoz.so
+		echo "install: Creating symlink from /usr/lib/mozilla/libgtkembedmoz.so to /usr/lib/libgtkembedmoz.so"
+		ln -s /usr/lib/mozilla/libgtkembedmoz.so /usr/lib/libgtkembedmoz.so
 		retvaltwo=$?
 		if [ $retvaltwo -ne 0 ]; then
 			echo "----------------------------"
@@ -178,19 +178,19 @@ ls /usr/lib/libxpcom.so > /dev/null 2> /dev/null
 retval=$?
 if [ $retval -ne 0 ]; then
 	echo "No"
-	echo -n "install: Looking whether libxpcom.so is in /usr/lib/mozilla-firefox... "
-	ls /usr/lib/mozilla-firefox/libxpcom.so > /dev/null 2> /dev/null
+	echo -n "install: Looking whether libxpcom.so is in /usr/lib/mozilla... "
+	ls /usr/lib/mozilla/libxpcom.so > /dev/null 2> /dev/null
 	retvaltwo=$?
 	if [ $retvaltwo -ne 0 ]; then
 		echo "install: No"
-		echo -n "install: Looking whether libxpcom.so is in /usr/lib/mozilla... "
-		ls /usr/lib/mozilla/libxpcom.so > /dev/null 2> /dev/null
+		echo -n "install: Looking whether libxpcom.so is in /usr/lib/mozilla-firefox... "
+		ls /usr/lib/mozilla-firefox/libxpcom.so > /dev/null 2> /dev/null
 		retvalthree=$?
 		if [ $retvalthree -ne 0 ]; then
 			echo "No"
 			echo "-----------------------------"
 			echo "install: WARNING!"
-			echo "install: Couldn´t find libxpcom.so in /usr/lib, /usr/lib/mozilla-firefox or /usr/lib/mozilla."
+			echo "install: Couldn´t find libxpcom.so in /usr/lib, /usr/lib/mozilla or /usr/lib/mozilla-firefox."
 			echo "install: Normally this is really really bad, but if you are lucky it simply works."
 			echo "install: Please don´t file any bugs if this message had appeared"
 			echo "-----------------------------"
@@ -202,8 +202,8 @@ if [ $retval -ne 0 ]; then
 			sleep 1
 		else
 			echo "Yes"
-			echo "install: Creating symlink from /usr/lib/mozilla/libxpcom.so to /usr/lib/libxpcom.so"
-			ln -s /usr/lib/mozilla/libxpcom.so /usr/lib/libxpcom.so
+			echo "install: Creating symlink from /usr/lib/mozilla-firefox/libxpcom.so to /usr/lib/libxpcom.so"
+			ln -s /usr/lib/mozilla-firefox/libxpcom.so /usr/lib/libxpcom.so
 			retvaltwo=$?
 			if [ $retvaltwo -ne 0 ]; then
 				echo "--------------------------"
@@ -217,8 +217,8 @@ if [ $retval -ne 0 ]; then
 		fi
 	else
 		echo "Yes"
-		echo "install: Creating symlink from /usr/lib/mozilla-firefox/libxpcom.so to /usr/lib/libxpcom.so"
-		ln -s /usr/lib/mozilla-firefox/libxpcom.so /usr/lib/libxpcom.so
+		echo "install: Creating symlink from /usr/lib/mozilla/libxpcom.so to /usr/lib/libxpcom.so"
+		ln -s /usr/lib/mozilla/libxpcom.so /usr/lib/libxpcom.so
 		retvaltwo=$?
 		if [ $retvaltwo -ne 0 ]; then
 			echo "----------------------------"
