--- a/trunk/gtk.mod/IDE/po/de.po
+++ b/trunk/gtk.mod/IDE/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-06-13 17:34+0200\n"
+"POT-Creation-Date: 2006-06-13 18:13+0200\n"
 "PO-Revision-Date:2006-06-11 21:22+0200\n"
 "Last-Translator: Philipp Kerling <k.philipp@googlemail.com>\n"
 "Language-Team: coding-industry <webmaster@coding-industry.de>\n"
@@ -30,7 +30,7 @@ msgstr ""
 
 #: ../ide.glade.h:4
 msgid "BMax-Editor"
-msgstr ""
+msgstr "Gtk-BlitzMax-IDE"
 
 #: ../ide.glade.h:5
 msgid "Befehlsdatei:"
